Fix vertical alignmnet of hover label

--- a/src/ui/Main.module.css
+++ b/src/ui/Main.module.css
@@ -162,7 +162,6 @@
 
   .header div {
     height: auto;
-    padding-bottom: 0;
     margin-bottom: 0;
   }
 
